- add back a simplified RelInfo Icon in `downloads`, `uploads`, `share` and `search` view - add `permalink` on top Bar - load http files with `file_get_contents` instead of `fsockopen` - refactor code and style of `/index.php` for better readability - removed `minigui`

--- a/language/deutsch.xml
+++ b/language/deutsch.xml
@@ -9,7 +9,7 @@
 	Core_Password="Core Passwort"
 	GUI_Style="Style"
 	GUI_Language="Sprache"
-	OK="OK"
+	OK="Login"
 />
 <general
 	Time="Stand"
@@ -31,6 +31,7 @@
 	Server="Server"
 	Settings="Einstellungen"
 	Extras="Extras"
+	Favorite="Permalink"
 	Logout="Logout"
 	CoreKill="Core Beenden"
 	CoreKill_question="Bist du sicher, dass du den Core beenden willst? Du wirst die Kontrolle &amp;uuml;ber den Core verlieren!"
